fix github button alignment

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body, html{
     font-family: Arial, Helvetica, sans-serif;
     overflow: hidden;
+    margin: 0px;
 
 }
 #body{
